@@ -9,3 +9,5 @@
 	.word	sym(GOTOFF)
 1:
 	.word	_GLOBAL_OFFSET_TABLE_ - 1b
+	.word foo2(RELABS)
+	.word foo3(SBREL)
